// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaginatedList rendering first page 1`] = `
<div
  className="container"
>
  <div
    className="controls_container"
  >
    <button
      className="controls_leftButton"
      disabled={true}
      onClick={[Function]}
    >
      <i
        className="fas fa-caret-left"
      />
    </button>
    <span
      className="controls_pageText"
    >
      Page 
      1
       of 
      2
    </span>
    <button
      className="controls_rightButton"
      disabled={false}
      onClick={[Function]}
    >
      <i
        className="fas fa-caret-right"
      />
    </button>
  </div>
  <MockComponent />
  <MockComponent
    className="children"
    id={1}
    key="1"
  />
  <MockComponent
    className="children"
    id={2}
    key="2"
  />
  <MockComponent
    className="children"
    id={3}
    key="3"
  />
</div>
`;

exports[`PaginatedList rendering last page 1`] = `
<div
  className="container"
>
  <div
    className="controls_container"
  >
    <button
      className="controls_leftButton"
      disabled={false}
      onClick={[Function]}
    >
      <i
        className="fas fa-caret-left"
      />
    </button>
    <span
      className="controls_pageText"
    >
      Page 
      2
       of 
      2
    </span>
    <button
      className="controls_rightButton"
      disabled={true}
      onClick={[Function]}
    >
      <i
        className="fas fa-caret-right"
      />
    </button>
  </div>
  <MockComponent />
  <MockComponent
    className="children"
    id={4}
    key="4"
  />
</div>
`;

exports[`PaginatedList rendering when data is not provided 1`] = `
<div
  className="container"
>
  <div
    className="controls_container"
  >
    <button
      className="controls_leftButton"
      disabled={true}
      onClick={[Function]}
    >
      <i
        className="fas fa-caret-left"
      />
    </button>
    <span
      className="controls_pageText"
    >
      Page 
      1
       of 
      1
    </span>
    <button
      className="controls_rightButton"
      disabled={true}
      onClick={[Function]}
    >
      <i
        className="fas fa-caret-right"
      />
    </button>
  </div>
  <MockComponent />
</div>
`;

exports[`PaginatedList rendering when no class names are provided 1`] = `
<div>
  <div>
    <button
      disabled={true}
      onClick={[Function]}
    >
      <i
        className="fas fa-caret-left"
      />
    </button>
    <span>
      Page 
      1
       of 
      2
    </span>
    <button
      disabled={false}
      onClick={[Function]}
    >
      <i
        className="fas fa-caret-right"
      />
    </button>
  </div>
  <MockComponent />
  <MockComponent
    id={1}
    key="1"
  />
  <MockComponent
    id={2}
    key="2"
  />
  <MockComponent
    id={3}
    key="3"
  />
</div>
`;

exports[`PaginatedList rendering when no props are provided 1`] = `
<div>
  <div>
    <button
      disabled={true}
      onClick={[Function]}
    >
      <i
        className="fas fa-caret-left"
      />
    </button>
    <span>
      Page 
      1
       of 
      1
    </span>
    <button
      disabled={true}
      onClick={[Function]}
    >
      <i
        className="fas fa-caret-right"
      />
    </button>
  </div>
  <header />
</div>
`;

exports[`PaginatedList rendering when pageSize is not provided 1`] = `
<div
  className="container"
>
  <div
    className="controls_container"
  >
    <button
      className="controls_leftButton"
      disabled={true}
      onClick={[Function]}
    >
      <i
        className="fas fa-caret-left"
      />
    </button>
    <span
      className="controls_pageText"
    >
      Page 
      1
       of 
      1
    </span>
    <button
      className="controls_rightButton"
      disabled={true}
      onClick={[Function]}
    >
      <i
        className="fas fa-caret-right"
      />
    </button>
  </div>
  <MockComponent />
  <MockComponent
    className="children"
    id={1}
    key="1"
  />
  <MockComponent
    className="children"
    id={2}
    key="2"
  />
  <MockComponent
    className="children"
    id={3}
    key="3"
  />
  <MockComponent
    className="children"
    id={4}
    key="4"
  />
</div>
`;
